--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
   },
   "dependencies": {
     "@npmcli/arborist": "^7.5.4",
-    "fs-copy-compat": "^0.1.5",
-    "fs-remove-compat": "^0.2.3",
-    "mkdirp-classic": "^0.5.3",
+    "fs-copy-compat": "^1.0.0",
+    "fs-remove-compat": "^1.0.0",
+    "mkdirp-classic": "^0.5.2",
     "npm-package-arg": "^13.0.2",
     "pacote": "^17.0.7",
     "semver": "^7.7.3",
@@ -66,22 +66,22 @@
     "temp-suffix": "^1.0.10"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^25.0.1",
+    "@types/mocha": "*",
+    "@types/node": "*",
     "@types/pacote": "^11.1.8",
     "@types/semver": "^7.7.1",
     "@types/tar": "^6.1.13",
-    "module-link-unlink": "^1.0.10",
-    "node-version-use": "^2.1.5",
-    "os-shim": "^0.1.3",
-    "queue-cb": "^1.6.3",
-    "resolve": "^1.22.11",
+    "module-link-unlink": "^1.0.11",
+    "node-version-use": "*",
+    "os-shim": "^0.1.0",
+    "queue-cb": "^1.0.0",
+    "resolve": "^1.3.1",
     "short-hash": "^1.0.0",
-    "ts-dev-stack": "^1.21.3",
-    "tsds-config": "^0.2.1",
-    "tsds-lib-test": "^1.19.4"
+    "ts-dev-stack": "*",
+    "tsds-config": "*",
+    "tsds-lib-test": "^1.19.7"
   },
   "engines": {
-    "node": ">=16.14.0"
+    "node": ">=16"
   }
 }
